--- a/main.css
+++ b/main.css
@@ -58,6 +58,60 @@ body {
     display: none;
 }
 
+.services {
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    padding: 1rem;
+    text-align: center;
+    font-size: 0.5rem;
+}
+
+.logoContainer {
+    display: none;
+    justify-content: center;
+}
+
+.smallLogoContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.logo {
+    margin: 0 auto 0 auto;
+}
+
+.testimonials div {
+    color: var(--secondary-color);
+    padding: 1rem;
+    text-align: center;
+}
+
+.darkBackground {
+    background-color: var(--secondary-color);
+    color: var(--primary-color)
+}
+
+.testimonialOne,
+.testimonialThree {
+    color: var(--primary-color) !important;
+}
+
+.endButtonContainer {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0 1rem 0;
+}
+
+.endCallToAction {
+    padding: 1rem;
+    justify-self: center;
+    color: white;
+    background-color: red;
+    box-shadow: 2px 2px 2px rgba(15, 99, 109, 0.5);
+    border-radius: 15px;
+    font-weight: bold;
+}
+
 @media screen and (min-width: 800px) {
     .mobileNav {
         display: none;
@@ -89,5 +143,50 @@ body {
 
     #callToActionButton {
         margin-left: auto;
+    }
+
+    .services {
+        font-size: 1rem;
+    }
+
+    .logoContainer {
+        display: flex;
+    }
+
+    .smallLogoContainer {
+        display: none;
+    }
+
+    .testimonials {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: auto auto;
+        grid-template-areas: 'one two' 'three two';
+        row-gap: 1rem;
+        column-gap: 1rem;
+        width: 75%;
+        justify-content: center;
+        margin: 0 auto 0 auto;
+        text-align: center;
+    }
+
+    .testimonials div {
+        background-color: var(--secondary-color);
+        color: var(--primary-color);
+        padding: 1rem;
+        border-radius: 15px;
+        box-shadow: 2px 2px 2px rgba(0,0,0,0.5)
+    }
+
+    .testimonialOne {
+        grid-area: one;
+    }
+
+    .testimonialTwo {
+        grid-area: two;
+    }
+
+    .testimonialThree {
+        grid-area: three;
     }
 }
