--- a/main.css
+++ b/main.css
@@ -112,7 +112,7 @@ body {
     font-weight: bold;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 700px) {
     .mobileNav {
         display: none;
     }
@@ -123,6 +123,7 @@ body {
         border-bottom: solid black thin;
         padding-left: 1rem;
         padding-right: 1rem;
+        padding-top: 1rem;
     }
 
     .headerFlex {
@@ -159,12 +160,10 @@ body {
 
     .testimonials {
         display: grid;
-        grid-template-rows: auto auto;
-        grid-template-columns: auto auto;
-        grid-template-areas: 'one two' 'three two';
+        grid-template-rows: auto auto auto;
+        grid-template-columns: auto;
         row-gap: 1rem;
-        column-gap: 1rem;
-        width: 75%;
+        width: 85%;
         justify-content: center;
         margin: 0 auto 0 auto;
         text-align: center;
@@ -176,6 +175,16 @@ body {
         padding: 1rem;
         border-radius: 15px;
         box-shadow: 2px 2px 2px rgba(0,0,0,0.5)
+    }
+}
+
+@media screen and (min-width: 850px) {
+    .testimonials {
+        grid-template-rows: auto auto;
+        grid-template-columns: auto auto;
+        grid-template-areas: 'one two' 'three two';
+        column-gap: 1rem;
+        width: 75%;
     }
 
     .testimonialOne {
