--- a/main.css
+++ b/main.css
@@ -110,6 +110,7 @@ body {
     box-shadow: 2px 2px 2px rgba(15, 99, 109, 0.5);
     border-radius: 15px;
     font-weight: bold;
+    text-decoration: none;
 }
 
 @media screen and (min-width: 700px) {
